--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bootswatch": "^5.2.2",
+    "file-saver": "^2.0.5",
     "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
