--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bootswatch": "^5.2.2",
     "file-saver": "^2.0.5",
     "firebase": "^9.12.1",
+    "mercadopago": "^1.5.14",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.5.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
